--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.19",
     "font-awesome": "^4.7.0",
+    "js-confetti": "^0.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
